# elib-k0-nt

./: .gitignore  AI_SCOPE.md  AI_SCOPE_EN.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  CONTRIBUTION.md  CONTRIBUTION_EN.md  Cargo.toml  INTRODUCTION.md  INTRODUCTION_EN.md  LICENSE  README.md  README_EN.md  cross-confirm.md
aes/: Cargo.toml  README.md  README_EN.md
aes/src/: block.rs  cbc.rs  ctr.rs  gcm.rs  ghash.rs  key.rs  lib.rs  sbox.rs
blake/: Cargo.toml
blake/src/: blake2b.rs  blake3.rs  lib.rs
blake/tests/: threat_inputs.rs
chacha20/: Cargo.toml
chacha20/src/: chacha20.rs  lib.rs  poly1305.rs
constant-time/: Cargo.toml  README.md  README_EN.md  dudect.txt
constant-time/examples/: ct_asm_probes.rs  ct_negative_probe.rs  ct_valgrind_negative.rs  ct_valgrind_probe.rs
constant-time/scripts/: check_ct_asm.sh
constant-time/src/: internal.rs  lib.rs
constant-time/tests/: attest_audit_ring_overwrite.rs  attest_collapse_ct.rs  attest_msg_layout.rs  attest_pk_hash_prefix_match.rs  attest_slot_unchanged_on_fail.rs  capability_token_regression.rs  chan_dual_auth_ct.rs  chan_length_ct.rs  chan_nonce_overflow.rs  chan_relay_buf_zeroize.rs  dudect.rs  gap_cap_take_fsm.rs  gap_network_denied_collapse.rs  gap_self_check.rs  gap_status_serialize.rs  hsm_attach_fail_empty_recover.rs  hsm_cap_ct.rs  hsm_enumerate_disclosure.rs  hsm_slot_fsm.rs  hsm_slot_zeroize.rs  softhsm_aesgcm_zeroize.rs  threat_inputs.rs  wire_attest_no_slot_mutation.rs  wire_attest_payload_layout.rs  wire_attest_submit_dispatch.rs  wire_blake3_response_bitexact.rs  wire_frame_parse.rs  wire_postcard_header_bitexact.rs  wire_response_single_outstanding.rs  wire_status_audit_serialize.rs  wire_status_response_build.rs  wire_tier1_oversize_reject.rs  wire_tier2_bad_header_reject.rs  wire_tier3_cap_auth_fail_denied.rs  wire_tier3_unknown_cmd_error_frame.rs
ed25519/: Cargo.toml  README.md  README_EN.md
ed25519/src/: field.rs  lib.rs  point.rs  scalar.rs
ed448/: Cargo.toml
ed448/src/: field.rs  lib.rs  point.rs  scalar.rs
elib-k0-ipc/: Cargo.toml
elib-k0-ipc/src/: error.rs  lib.rs  op.rs  request.rs  response.rs  secret.rs  transport.rs  wire.rs
elib-k0-ipc/tests/: sealed_external_attempt.rs  whitelist_message_substring.rs
elib-k0-mock-transport/: Cargo.toml
elib-k0-mock-transport/src/: lib.rs
elib-k0d-core/: Cargo.toml
elib-k0d-core/.cargo/: config.toml
elib-k0d-core/src/: arena.rs  dispatcher.rs  lib.rs
elib-k0d-core/tests/: ed25519_e2e_roundtrip.rs
mldsa/: Cargo.toml  README.md  README_EN.md
mldsa/src/: error.rs  field.rs  keys.rs  lib.rs  ntt.rs  pack.rs  poly.rs  sample.rs  sign.rs
mldsa/tests/: mldsa_test.rs
mlkem/: Cargo.toml
mlkem/src/: encode.rs  kem.rs  kpke.rs  lib.rs  ntt.rs  params.rs  poly.rs  reduce.rs  sample.rs
rng/: Cargo.toml  README.md  README_EN.md
rng/src/: hash_drbg.rs  lib.rs  os_entropy.rs
scripts/: Dockerfile.ctgrind  check_ct_ir.py  run_ct_ir.sh  run_ctgrind.sh  run_miri.sh
sha2/: Cargo.toml  README.md  README_EN.md
sha2/src/: lib.rs  sha2_256.rs  sha2_512.rs
sha3/: Cargo.toml  README.md  README_EN.md
sha3/src/: _sha3_test.rs  keccak.rs  lib.rs
x25519/: Cargo.toml
x25519/src/: field.rs  lib.rs
x448/: Cargo.toml
x448/src/: field.rs  lib.rs
zeorize/: Cargo.toml
zeorize/src/: barrier.rs  lib.rs  secret.rs  volatile.rs  zeroize.rs
zeorize/src/barrier/: aarch64.rs  fallback.rs  x86_64.rs
zeroize/: Cargo.toml  README.md  README_EN.md
zeroize/examples/: zeroize_asm_probes.rs
zeroize/src/: barrier.rs  lib.rs  secret.rs  volatile.rs  zeroize.rs
zeroize/tests/: zeroize_readback.rs
(+1 files in other folders)
