[workspace]
members = [
    "blake",
    "constant-time",
    "rng",
    "ed25519",
    "ed448",
    "sha2",
    "sha3",
    "x25519",
    "x448",
    "aes",
    "chacha20",
    "mldsa",
    "mlkem",
    "zeroize",
    "elib-k0-ipc",
    "elib-k0-mock-transport",
    "elib-k0d-core",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Q. T. Felix <qtfelix@qu4nt.space>"]
# 루트 LICENSE (MIT) 와 동기화. SPDX 식별자로 명시해 다운스트림
# 공급망 감사 도구 (cargo-deny 등) 가 인식하도록 함.
license = "MIT"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true # Link Time Optimization을 통한 바이너리 최소화
opt-level = "z" # 크기 최적화

[workspace.dependencies]
zeroize = { path = "zeroize", version = "1.0.0" }
constant-time = { path = "constant-time", version = "1.0.0" }
sha2 = { path = "sha2", version = "1.0.0" }
sha3 = { path = "sha3", version = "1.0.0" }
blake = { path = "blake", version = "1.0.0" }
rng = { path = "rng", version = "1.0.0" }
ed25519 = { path = "ed25519", version = "1.0.0" }
ed448 = { path = "ed448", version = "1.0.0" }
x25519 = { path = "x25519", version = "1.0.0" }
x448 = { path = "x448", version = "1.0.0" }
aes = { path = "aes", version = "1.0.0" }
chacha20 = { path = "chacha20", version = "1.0.0" }
mldsa = { path = "mldsa", version = "1.0.0" }
mlkem = { path = "mlkem", version = "1.0.0" }
elib-k0-ipc = { path = "elib-k0-ipc", version = "1.0.0" }
elib-k0-mock-transport = { path = "elib-k0-mock-transport", version = "1.0.0" }
elib-k0d-core = { path = "elib-k0d-core", version = "1.0.0" }
