[package]
name = "elib-k0-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zeroize.workspace = true

[lints.clippy]
indexing_slicing = "forbid"
panic            = "forbid"
unwrap_used      = "forbid"
expect_used      = "forbid"
